fix account header alignment

--- a/src/scss/stratifi/_app-investor-account.scss
+++ b/src/scss/stratifi/_app-investor-account.scss
@@ -86,13 +86,6 @@
         td {
           font-weight: bold;
           text-align: center;
-          width: 300px;
-          padding-left: 0;
-          padding-right: 0;
-
-          &:first-child {
-            width: 800px;
-          }
 
           &.toggle-col {
             width: 160px;
@@ -180,16 +173,20 @@
     &.total-account-row {
       thead {
         td:first-child {
-          width: 700px;
-          padding-right: 0;
-          padding-left: 30px;
+          .shift-right{
+            padding-right: 0;
+            padding-left: 30px;
+          }
         }
       }
       tbody {
         background: #D9F3FD;
 
         td:first-child {
-          padding-left: 70px;
+          .shift-right{
+            padding-right: 0;
+            padding-left: 70px;
+          }
         }
       }
     }
